<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flPlaybackControl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- 视频标题 -->
    <TextView
        android:id="@+id/video_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        tools:ignore="RtlHardcoded"/>

    <FrameLayout
        android:id="@+id/flPauseBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:visibility="invisible">

        <!--底部-->
        <LinearLayout
            android:id="@+id/bottom_chrome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:paddingEnd="10dp"
            android:paddingStart="0dp">

            <!--底部操作-->
            <LinearLayout
                android:id="@+id/bottom_option"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <!--静音按钮-->
                <ImageButton
                    android:id="@+id/videoMute"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:contentDescription="@string/video_mute"
                    android:paddingEnd="5dp"
                    android:paddingStart="0dp"/>

                <!-- 播放视频当前时长 -->
                <TextView
                    android:id="@+id/time_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:contentDescription="@string/time_current"
                    android:textColor="@android:color/white"
                    tools:ignore="RtlHardcoded"/>

                <!-- 视频拉动条 -->
                <SeekBar
                    android:id="@+id/mediacontroller_progress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="2.5dp"
                    android:layout_marginStart="2.5dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/seekbar"
                    android:maxHeight="2.5dp"
                    android:minHeight="2.5dp"
                    android:paddingLeft="2.5dp"
                    android:paddingRight="2.5dp"
                    android:progressDrawable="@drawable/seek_bar_progress"
                    android:thumb="@drawable/seek_thumb"/>

                <!-- 视频时长 -->
                <TextView
                    android:id="@+id/time_duration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/time_duration"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"/>
            </LinearLayout>

            <!-- 全屏切换 -->
            <ImageButton
                android:id="@+id/fullscreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/transparent"
                android:contentDescription="@string/fullscreen_button"
                android:paddingBottom="10dp"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/video_full_screen"
                tools:ignore="RtlHardcoded"/>
        </LinearLayout>
    </FrameLayout>

    <!-- 底部视频播放进度条  -->
    <ProgressBar
        android:id="@+id/pbVideoPlay"
        style="@android:style/Widget.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_gravity="bottom"
        android:max="1000"
        android:progressDrawable="@drawable/progressbar_play"/>

    <ImageView
        android:id="@+id/ivBlackBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:contentDescription="@string/bg"
        android:visibility="gone"/>
</FrameLayout>